<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Basic_cycle_Param_typ" Id="{1b3e67a6-edeb-0cad-0305-d0de149171c6}">
    <Declaration><![CDATA[TYPE Basic_cycle_Param_typ :
	STRUCT
		TimeOut 		: TIME;
		CycleTimeOut 	: TIME;
		ThreadName 		: STRING[50];
		CHName 			: STRING[20];
		PosForLog 		: USINT;
		StepMessageIsForNewState	: BOOL := FALSE; (* indicate that StepMessage is set for StepNo that be moving to; is FALSEd right after printing the log *)
		ExternalLogType :enumLogMessageLevelSeverity ;
		
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>